# squads-cli-rs

./: Cargo.toml
src/: main.rs
