[package]
name = "squads-cli-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squads-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
borsh = "0.10.3"
clap = "2.34.0"
solana-clap-utils = "1.16.1"
solana-cli-config = "1.16.1"
solana-client = "1.16.1"
solana-remote-wallet = "1.16.1"
solana-sdk = "1.16.1"
