[package]
name = "squads-cli-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "squads-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
borsh = "1.5.7"
clap = "2.33"
rand = "0.9.2"
solana-clap-utils = "2.3.6"
solana-cli-config = "2.3.6"
solana-client = "2.3.6"
solana-remote-wallet = "2.3.6"
solana-sdk = {version="2.3.1"}
solana-system-interface = "1.0.0"
